Fix stats-grid and filters layout on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -1028,13 +1028,6 @@ select:disabled {
         flex: 1;
         margin-bottom: 0;
     }
-    
-    .stats-grid {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
 }
 
 @media (max-width: 650px) {
@@ -1058,7 +1051,9 @@ select:disabled {
     }
     
     .filter-group {
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: stretch;
+        gap: 0.2rem;
     }
     
     .listings-table th:nth-child(5),
